[package]
name = "sszb"
version = "0.1.0"
edition = "2021"

[lib]
name = "sszb"

[dependencies]
alloy-primitives = "0.8.3"
bytes = "1.7.2"
criterion = "0.5.1"
ethereum-types = "0.15.1"
itertools = "0.13.0"
milhouse = "0.3.0"
ghilhouse = { package = "milhouse", git = "https://github.com/ghiliweld/milhouse.git" }
sigp_bls = { package = "bls", git = "https://github.com/paulhauner/lighthouse.git", branch = "sszb-compare" }
paste = "1.0.15"
smallvec = "1.13.2"
ssz_types = "0.8.0"
typenum = "1.17.0"
tree_hash = "0.8.0"
tree_hash_derive = "0.8.0"
ethereum_ssz = "0.8.0"

[dev-dependencies]
dhat = "0.3.3"
sszb_derive = { path = "../sszb_derive" }

[[bench]]
name = "bench"
harness = false
